[gd_scene load_steps=10 format=3 uid="uid://b3mgn20d1t5uo"]

[ext_resource type="Script" path="res://Scenes/settings_component.gd" id="1_4ed3f"]
[ext_resource type="PackedScene" uid="uid://jjuu8asfhrpm" path="res://Game/UI/Settings_Menu/settings.tscn" id="1_hv6n7"]
[ext_resource type="Shader" path="res://Assets/Shaders/note.gdshader" id="2_dei3m"]
[ext_resource type="Texture2D" uid="uid://bsfmf4ofw2ivx" path="res://Assets/UI/EnemyPointArrow.png" id="2_knm0c"]
[ext_resource type="Texture2D" uid="uid://8k2553q8h8bw" path="res://Assets/UI/Notes/ComboContainer.png" id="3_5f5vt"]
[ext_resource type="Theme" uid="uid://bbj4at51n1iaj" path="res://Assets/Themes/button.tres" id="3_8vl1i"]
[ext_resource type="FontFile" uid="uid://kpqikns6mdrr" path="res://Assets/Fonts/LittleMissLoudonBold-VGO9l.ttf" id="4_j3lx5"]
[ext_resource type="Theme" uid="uid://b3mt2m647n0e3" path="res://Assets/Themes/label.tres" id="6_4nkdy"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_w34ij"]
shader = ExtResource("2_dei3m")
shader_parameter/max_line_width = 9.705
shader_parameter/min_line_width = 5.0
shader_parameter/freq = 1.0
shader_parameter/block_size = 20.0
shader_parameter/starting_colour = Vector4(1, 1, 0, 1)
shader_parameter/ending_colour = Vector4(1, 0, 0, 0)

[node name="SettingsComponent" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4ed3f")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
texture_filter = 3
material = SubResource("ShaderMaterial_w34ij")
custom_minimum_size = Vector2(220, 150)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -221.0
offset_top = -133.0
offset_right = 243.0
offset_bottom = 166.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_5f5vt")
patch_margin_left = 104
patch_margin_top = 50
patch_margin_right = 115
patch_margin_bottom = 50

[node name="SettingsMenu" parent="." instance=ExtResource("1_hv6n7")]
layout_mode = 1

[node name="BlueSky" parent="SettingsMenu" index="0"]
visible = false

[node name="EnemyPointArrow2" type="Sprite2D" parent="SettingsMenu"]
texture_filter = 3
position = Vector2(1161, 82)
rotation = -3.14159
scale = Vector2(-2, 2)
texture = ExtResource("2_knm0c")

[node name="MarginContainer2" type="MarginContainer" parent="SettingsMenu"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -365.0
offset_bottom = 93.0
grow_horizontal = 0
theme_override_constants/margin_top = 65
theme_override_constants/margin_right = 65

[node name="ContinueButton" type="Button" parent="SettingsMenu/MarginContainer2"]
layout_mode = 2
theme = ExtResource("3_8vl1i")
theme_override_fonts/font = ExtResource("4_j3lx5")
theme_override_font_sizes/font_size = 32
text = "Continue"

[node name="Timer" type="Timer" parent="."]

[node name="Label" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = -224.0
offset_right = 128.0
offset_bottom = 224.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("6_4nkdy")
theme_override_font_sizes/font_size = 512
text = "3
"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="SettingsMenu/MarginContainer2/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]

[editable path="SettingsMenu"]
